{
  "version": 4,
  "terraform_version": "1.13.0",
  "serial": 37,
  "lineage": "9c6c7698-3755-6c07-c14f-70675438b8fe",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_vpc",
      "name": "lab_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:714741688719:vpc/vpc-0348f9f407e7997aa",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0a2a0b54148b74d4b",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0157bd29b2e5a4138",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0348f9f407e7997aa",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0be337330e9560981",
            "owner_id": "714741688719",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:714741688719:security-group/sg-027ac79b8197e11a7",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-027ac79b8197e11a7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 1433,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c311ef41d8eab486"
                ],
                "self": false,
                "to_port": 1433
              }
            ],
            "name": "vaultcart-db-sg",
            "name_prefix": "",
            "owner_id": "714741688719",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "VaultCart-Private-DB-SG"
            },
            "tags_all": {
              "Name": "VaultCart-Private-DB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0348f9f407e7997aa"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "714741688719",
            "id": "sg-027ac79b8197e11a7",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.web_sg",
            "module.vpc.data.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:714741688719:security-group/sg-0c311ef41d8eab486",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c311ef41d8eab486",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "vaultcart-web-sg",
            "name_prefix": "",
            "owner_id": "714741688719",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0348f9f407e7997aa"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "714741688719",
            "id": "sg-0c311ef41d8eab486",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.data.aws_vpc.lab_vpc"
          ]
        }
      ]
    }
  ]
}